[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["nicosiebert <nicosiebert84@gmail.com>"]
license = "MIT Licence"

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
